Correcting overflow-y

--- a/src/stylus/product-list/style.styl
+++ b/src/stylus/product-list/style.styl
@@ -6,7 +6,7 @@
   @media (max-width: 767px)
     -webkit-overflow-scrolling touch
     overflow-x scroll
-    overflow-y none
+    overflow-y hidden
     white-space nowrap
   @media ipadsAndUp
     padding-left 0
